manifests/sentryfuse/dev-httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sentryfuse-dev
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: web-gateway
  hostnames:
  - sentryfuse.opstree.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: sentryfuse-frontend-x-sentryfuse-x-coe-dev-vcluster
      namespace: coe-dev
      port: 80
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sentryfuse-api-dev
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: web-gateway
  hostnames:
  - sentryfuse-api.opstree.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: sentryfuse-api-x-sentryfuse-x-coe-dev-vcluster
      namespace: coe-dev
      port: 8080
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sentryfuse-webhook-dev
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: web-gateway
  hostnames:
  - sentryfuse-webhook.opstree.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: sentryfuse-webhook-x-sentryfuse-x-coe-dev-vcluster
      namespace: coe-dev
      port: 8080
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sentryfuse-pr-reviewer-dev
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: web-gateway
  hostnames:
  - sentryfuse-pr-review.opstree.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: sentryfuse-pr-reviewer-x-sentryfuse-x-coe-dev-vcluster
      namespace: coe-dev
      port: 8000
      weight: 1
